Fix QueryHeader wrapping behavior for mobile

--- a/client/app/pages/queries/components/query-page-header.less
+++ b/client/app/pages/queries/components/query-page-header.less
@@ -9,7 +9,10 @@
   }
 
   .page-title {
+    display: flex;
+    align-items: center;
     flex: 1 1 auto;
+    flex-wrap: wrap;
   }
 
   .tags-control a {
